# wallierallie

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
neww/: Cargo.toml
neww/src/: main.rs  types.rs  utils.rs  wal.rs
src/: main.rs
src/config/: config.rs
src/types/: types.rs
src/utils/: utils.rs
